--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 	<dependencies>
 
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.github.elcolora3x</groupId>
             <artifactId>libreriaclasescomunes</artifactId>
             <version>1.3</version>
