feat: add retry logic and fallback for Georef API

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,3 +1,10 @@
 GEOREF_PORT=8087
 URL_EUREKA=http://localhost:8761/eureka
 REDIRECT_URI=http://localhost:9000/
+
+# Georef API Configuration
+georef.api.primary.url=https://apis.datos.gob.ar/georef/api/v2.0
+georef.api.fallback.url=https://apis.datos.gob.ar/georef/api
+georef.api.timeout.connect=5000
+georef.api.timeout.read=10000
+georef.api.max-results=5000
